change footer links

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,15 @@
     -->
   <footer class="info" style="display: none;">
     <p>A demo application built on the top of
-      <a href="http://github.com/swarmdb">SwarmDB</a>. Check the
-      <a href="http://github.com/olebedev/todo">repo</a>.
+      <a target="_blank" href="http://github.com/gritzko/swarm">SwarmDB</a>. Check the
+      <a target="_blank" href="http://github.com/olebedev/todo">repo</a>.
     </p>
+    <p>
+      <a href="/todo">Create new todo list</a> or
+      <a href="javascript: localStorage.clear(); location.reload()">reset</a> local storage.</p>
     <p>Open this page in other tab or device.</p>
     <p>Created by
-      <a href="http://github.com/olebedev">olebedev</a>.
+      <a target="_blank" href="http://github.com/olebedev">olebedev</a>.
     </p>
   </footer>
 </body>
